--- a/rpgui.css
+++ b/rpgui.css
@@ -67,7 +67,7 @@ inside your html file.
   font-size: 1.0em;
   /* default size and display */
   max-width: 100%;
-  min-width: 140px;
+  min-width: 300px;
   height: 60px;
   display: inline-block;
   /* padding */
@@ -203,6 +203,8 @@ inside your html file.
 /* game div with background image*/
 .rpgui-content {
   padding: 0 0 0 0;
+  display: flex;
+  justify-content: center;
   margin: 0 0 0 0;
   width: 100%;
   height: 100%;
@@ -277,6 +279,7 @@ inside your html file.
   border-image-width: 18px;
   border-width: 15px;
   padding: 12px;
+  margin: 25px;
   /* internal border */
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -291,6 +294,7 @@ inside your html file.
 .rpgui-container.framed-golden-2 {
   /* border */
   border-style: solid;
+  position: relative;
   border-image-source: url("img/border-image-golden2.png");
   border-image-repeat: repeat;
   border-image-slice: 8 8 8 8;
@@ -302,7 +306,7 @@ inside your html file.
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   /* background */
-  background: url("img/background-image-golden2.png") repeat repeat;
+  background-color:#D2B48C;
   background-clip: padding-box;
   background-origin: padding-box;
   background-position: center; }
